--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,9 @@
       <% if current_user.type == "Admin" %>
          <%= render(:partial => "devise/create_plan", :locals => { :user => current_user})%>
       <% end %>
+       <% if current_user.type == "Buyer" %>
+         <%= render(:partial => "Buyer/create_subscription", :locals => { :user => current_user})%>
+      <% end %>
   <% end %>
 
 
