--- a/app/views/devise/shared/_buyer.html.erb
+++ b/app/views/devise/shared/_buyer.html.erb
@@ -6,25 +6,19 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">All Users</a>
+            <a class="nav-link" href="/subscriptions">Subscriptions </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/plans">Plans</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="/plans/new">Create Plan</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="/features">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="/features/new">Add new feature</a>
+            <a class="nav-link disabled" href="/subscriptions/new">Create Subscription</a>
           </li>
         </ul>
       </div>
 
       <% if user_signed_in? %>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="welcome/show_profile">
           <%= image_tag current_user.image, class: "style_image" %>
         </a>
         <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
