--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,28 @@
   <body>
 
     <div class="container">
+      <% if !current_user %>
+
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="/users/sign_in">Sign In <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/sign_up">Sign up</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+      <% end %>
       <% if user_signed_in? && current_user.type == 'Admin'  %>
         <%= render  "devise/shared/admin" %>
+      <% end %>
+
+      <% if user_signed_in? && current_user.type == 'Buyer'  %>
+        <%= render  "devise/shared/buyer" %>
       <% end %>
 
       <%= yield %>
