--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with model: @feature, local: true do |form| %>
   <% if @feature.errors.any?  %>
   <div>
@@ -9,21 +10,26 @@
     </ul>
   </div>
   <% end %>
-
-  <%= form_with model: @feature do |form| %>
-    <p>
+<div class="container ">
+  <%= form_with model: @feature do |form|, class:'form-group' %>
+    <div class="field">
       <%= form.label :name %><br>
       <%= form.text_field :name %>
-    </p>
+    </div>
 
-    <p>
+    <div class="field">
       <%= form.label :unit_price %><br>
-      <%= form.text_area :unit_price %>
-    </p>
+      <%= form.number_field :unit_price %>
+    </div>
 
-    <p>
+    <div class="field">
+      <%= form.label :max_limit %><br>
+      <%= form.number_field :max_limit %>
+    </div>
+
+    <div class="action">
       <%= form.submit %>
-    </p>
+    </div>
   <% end %>
-
+</div>
 <% end %>
