--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,24 +1,27 @@
-<h2>Create a Plan:</h2>
-<%= form_with model: @plan, local: true do |form| %>
-  <p>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </p>
-  <p>
-    <%= form.label :fee %><br>
-    <%= form.text_area :fee %>
-  </p>
+<h2>Create a Plan</h2>
+<div class="container" >
+  <%= form_with model: @plan, local: true do |form| %>
+    <p>
+      <%= form.label :name %><br>
+      <%= form.text_field :name %>
+    </p>
+    <p>
+      <%= form.label :fee %><br>
+      <%= form.text_area :fee %>
+    </p>
 
-  <ul>
-    <%= form.collection_check_boxes :feature_ids, Feature.all, :id, :name, {}, {multiple: true} do |b| %>
-      <li>
-        <%= b.label %>
-        <%= b.check_box %>
-      </li>
-    <% end %>
-  </ul>
+    <div class= "form-group">
+      <%= form.collection_check_boxes :feature_ids, Feature.all, :id, :name, {}, {multiple: true} do |b| %>
+        <div>
+          <%= b.label(class: "form-check-label") %>
+          <%= b.check_box (class: "form-input") %>
+        </div>
+      <% end %>
+    </div>
 
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+    <p>
+
+      <%= form.submit(class: "btn btn-success") %>
+    </p>
+  <% end %>
+</div>
