Create Usages and fixed issue in create function of controller

--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -1,34 +1,2 @@
-
-<%= form_with model: @plan, local: true do |form| %>
-  <% if @plan.errors.any?  %>
-  <div>
-    <h1> <%= pluralize(@plan.errors.count,'error') %> prohibited this plan from being saved. </h1>
-    <ul>
-    <%  @plan.errors.full_messages.each do |msg| %>
-    <li> <%= msg %> </li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
-
-  <%= form_with model: @plan do |form| %>
-    <p>
-      <%= form.label :name %><br>
-      <%= form.text_field :name %>
-    </p>
-
-    <p>
-      <%= form.label :fee %><br>
-      <%= form.text_area :fee %>
-    </p>
-
-    <p>
-      <%= form.label :feature_ids, "Features" %><br />
-      <%= form.collection_check_boxes :feature_ids, Feature.all, :id, :name, {}, {multiple: true} %>
-    </p>
-
-    <p>
-      <%= form.submit %>
-    </p>
-  <% end %>
-<% end %>
+<h2>Edit Plan</h2>
+<%= render 'form', plan: @plan %>
