--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
+<div class="row">
 
-
-<div class = "ml-50" >
+<div class = "ml-50" style="margin:auto">
   <h2>Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -10,8 +10,9 @@
       <%= f.text_field :name, autofocus: true %>
     </div>
 
-    <div class=”field”> (Upload your new profile picture below!)
-      <%= f.file_field :image %> </div>
+    <div class=”field”>
+      <p> Upload Profile Picture </p>
+      <%= f.file_field :image %>
     </div>
 
     <div class="field">
@@ -37,9 +38,11 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <br>
+      <%= f.submit "Sign up", class: "btn btn-success" %>
     </div>
   <% end %>
 </div>
 
 
+</div>
