--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -10,25 +10,25 @@
     </ul>
   </div>
   <% end %>
-<div class="container ">
-  <%= form_with model: @feature do |form|, class:'form-group' %>
-    <div class="field">
+<div class="container" style="width: 200px">
+  <%= form_with model: @feature do |form| %>
+    <div class="form-group">
       <%= form.label :name %><br>
       <%= form.text_field :name %>
     </div>
 
-    <div class="field">
+    <div  class="form-group">
       <%= form.label :unit_price %><br>
       <%= form.number_field :unit_price %>
     </div>
 
-    <div class="field">
+    <div  class="form-group">
       <%= form.label :max_limit %><br>
       <%= form.number_field :max_limit %>
     </div>
 
     <div class="action">
-      <%= form.submit %>
+      <%= form.submit "Save", class: 'btn btn-success' %>
     </div>
   <% end %>
 </div>
