--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,15 +1,17 @@
-<%= form_with(model: @subscription, local: true) do |form| %>
-  <p>
-    <%= form.label :billing_date %><br>
-    <%= form.text_field :billing_date %>
-  </p>
 
-  <p>
-    <%= form.label :plan_id, "Plan" %><br />
-    <%= select_tag :plan_id, options_for_select(Plan.all.collect{ |u| [u.name, u.id] }) %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
+<div class="container", style= "width: 300px;" >
+  <%= form_with(model: @subscription, local: true) do |form| %>
+    <div class= "form-group">
+      <%= form.label :billing_date %><br>
+      <%= form.text_field :billing_date %>
+    </div>
 
-<% end %>
+    <div class= "form-group">
+      <%= form.label :plan_id, "Plan" %><br />
+      <%= select_tag :plan_id, options_for_select(Plan.all.collect{ |u| [u.name, u.id] }) %>
+    </div>
+    <div >
+      <%= form.submit  "Create Subscription",  class: "btn btn-success" %>
+    </div>
+  <% end %>
+</div>
