--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -16,7 +16,7 @@
               <%= subscription.user_id %>
             </td>
             <td>
-              <%= subscription.plan_id %>
+              <%= subscription.plan.name %>
             </td>
             <td>
               <%= subscription.billing_date %>
