--- a/app/views/subscriptions/show.html.erb
+++ b/app/views/subscriptions/show.html.erb
@@ -1,10 +1,10 @@
 <h2>Your Subscriptions</h2>
-
   <table class="table table-dark">
     <thead>
       <tr>
         <th>User</th>
         <th>Plan</th>
+        <th>Billing Date</th>
       </tr>
     </thead>
     <tbody>
@@ -13,7 +13,7 @@
               <%= subscription.user_id %>
             </td>
             <td>
-              <%= subscription.plan_id %>
+              <%= subscription.plan_name %>
             </td>
             <td>
               <%= subscription.billing_date %>
