--- a/app/views/devise/shared/_admin.html.erb
+++ b/app/views/devise/shared/_admin.html.erb
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="/features/new">Add new feature</a>
           </li>
+           <li class="nav-item">
+            <a class="nav-link disabled" href="/usages/new">Add new Usage</a>
+          </li>
         </ul>
       </div>
 
