Billing function completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="container">
+
       <% if !current_user %>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,6 +24,7 @@
           </div>
         </nav>
       <% end %>
+
       <% if user_signed_in? && current_user.type == 'Admin'  %>
         <%= render  "devise/shared/admin" %>
       <% end %>
@@ -32,8 +33,16 @@
         <%= render  "devise/shared/buyer" %>
       <% end %>
 
+     <% if notice %>
+      <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= flash[:notice] %>
+      </div>
+     <% end %>
       <%= yield %>
 
-    </div>
   </body>
+  <script>
+    $(".alert" ).fadeOut(3000);
+  </script>
 </html>
