--- a/app/views/devise/shared/_admin.html.erb
+++ b/app/views/devise/shared/_admin.html.erb
@@ -1,12 +1,14 @@
 
+
+
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse col-md-8 mx-auto" id="navbarNav" >
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">All Users</a>
+            <a class="nav-link" href="/subscriptions">All Subscriptions</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/plans">Plans</a>
@@ -23,6 +25,7 @@
            <li class="nav-item">
             <a class="nav-link disabled" href="/usages/new">Add new Usage</a>
           </li>
+
         </ul>
       </div>
 
