--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -1,31 +1,37 @@
-<h2>Features</h2>
-<div id="abc">
 
-   <table class="table table-dark">
-    <thead>
-      <tr>
-        <th>Feature Name</th>
-        <th>Unit_price</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @features.each do |feature| %>
-          <tr id="feature_<%= feature.id %>">
-            <td>
-              <%= feature.name %>
-            </td>
-            <td>
-              <%= feature.unit_price %>
-            </td>
-            <td>
-              <%= link_to 'Edit',edit_feature_path(feature) %>
-            </td>
-            <td>
-              <%= link_to 'Delete', feature_path(feature),remote: true, method: :delete, data: { confirm: "Are you sure?" } %>
-            </td>
+<div class="row">
+  <div class="col-md-8 mx-auto" >
+
+    <div id="abc">
+
+      <table class="table table-dark">
+        <h2 class="text-center">Features</h2>
+        <thead>
+          <tr>
+            <th>Feature Name</th>
+            <th>Unit_price</th>
           </tr>
-      <% end %>
-    </tbody>
-  </table>
+        </thead>
+        <tbody>
+          <% @features.each do |feature| %>
+              <tr id="feature_<%= feature.id %>">
+                <td>
+                  <%= feature.name %>
+                </td>
+                <td>
+                  <%= feature.unit_price %>
+                </td>
+                <td>
+                  <%= link_to 'Edit',edit_feature_path(feature) %>
+                </td>
+                <td>
+                  <%= link_to 'Delete', feature_path(feature),remote: true, method: :delete, data: { confirm: "Are you sure?" } %>
+                </td>
+              </tr>
+          <% end %>
+        </tbody>
+      </table>
 
+    </div>
+  </div>
 </div>
