--- a/app/views/usages/index.html.erb
+++ b/app/views/usages/index.html.erb
@@ -1,23 +1,31 @@
+
 <div class="row">
-  <div class="col-md-6 mx-auto text-center">
+  <div class="col-md-8 mx-auto">
     <h2 class="">Usages</h2>
     <table class="table table-dark">
       <thead>
         <tr>
           <th>Usage id</th>
           <th>Subscription id</th>
+          <th>Feature id</th>
+          <th>Units_used</th>
         </tr>
       </thead>
       <tbody>
-        <% @usages.each do |usage| %>
+        <% @usage.each do |usage| %>
             <tr>
+              <td>
+                <%= usage.id %>
+              </td>
+              <td>
+                <%= usage.subscription_id %>
+              </td>
               <td>
                 <%= usage.feature_id %>
               </td>
               <td>
                 <%= usage.units_used %>
               </td>
-              </tr>
         <% end %>
       </tbody>
     </table>
