--- a/app/views/devise/shared/_admin.html.erb
+++ b/app/views/devise/shared/_admin.html.erb
@@ -4,26 +4,17 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="collapse navbar-collapse col-md-8 mx-auto" id="navbarNav" >
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/subscriptions">All Subscriptions</a>
+          <li class="nav-item ">
+            <a class="nav-link active" href="/subscriptions">All Subscriptions</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/plans">Plans</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="/plans/new">Create Plan</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="/features">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="/features/new">Add new feature</a>
+            <a class="nav-link " href="/features">Features</a>
           </li>
            <li class="nav-item">
-            <a class="nav-link disabled" href="/usages/new">Add new Usage</a>
+            <a class="nav-link" href="/usages/new">Add new Usage</a>
           </li>
 
         </ul>
