--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -10,6 +10,11 @@
       <%= form.text_field :name %>
     </div>
 
+    <div class="form-group">
+      <%= form.label :code %><br>
+      <%= form.text_field :code %>
+    </div>
+
     <div  class="form-group">
       <%= form.label :unit_price %><br>
       <%= form.number_field :unit_price %>
