--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -1,15 +1,15 @@
 
-<div class="row">
+<div class="row mt">
   <div class="col-md-8 mx-auto" >
-
     <div id="abc">
 
       <table class="table table-dark">
-        <h2 class="text-center">Features</h2>
+        <h2 class="text-center"><strong>Features</strong></h2>
         <thead>
           <tr>
             <th>Feature Name</th>
             <th>Unit_price</th>
+            <th>Feature code</th>
           </tr>
         </thead>
         <tbody>
@@ -21,11 +21,14 @@
                 <td>
                   <%= feature.unit_price %>
                 </td>
-                <td>
-                  <%= link_to 'Edit',edit_feature_path(feature) %>
+                 <td>
+                  <%= feature.code %>
                 </td>
                 <td>
-                  <%= link_to 'Delete', feature_path(feature),remote: true, method: :delete, data: { confirm: "Are you sure?" } %>
+                  <%= link_to 'Edit',edit_feature_path(feature), class:'link' %>
+                </td>
+                <td>
+                  <%= link_to 'Delete', feature_path(feature),remote: true, method: :delete, data: { confirm: "Are you sure?" }, class:'link' %>
                 </td>
               </tr>
           <% end %>
@@ -35,3 +38,10 @@
     </div>
   </div>
 </div>
+ <% if current_user.type == 'Admin' %>
+    <div class="row">
+      <div class="col-md-8 mx-auto" >
+        <%= link_to 'Create Feature',new_feature_path, class: 'btn btn-success' %>
+      </div>
+    </div>
+ <% end %>
