--- a/app/views/subscriptions/show.html.erb
+++ b/app/views/subscriptions/show.html.erb
@@ -4,15 +4,15 @@
     <table class="table table-dark">
       <thead>
         <tr>
-          <th>Usage id</th>
-          <th>Subscription id</th>
+          <th>Feature</th>
+          <th>Units Used</th>
         </tr>
       </thead>
       <tbody>
         <% @usages.each do |usage| %>
             <tr>
               <td>
-                <%= usage.feature_id %>
+                <%= usage.feature.name %>
               </td>
               <td>
                 <%= usage.units_used %>
