--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,6 +15,11 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
+  <div class=”field”>
+    <p> Change Profile Picture </p>
+    <%= f.file_field :image %>
+  </div>
+
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
@@ -32,6 +37,14 @@
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
+  </div>
+
+  <div class="field">
+    <%= f.hidden_field :type,  value: "Buyer" %>
+    <% if current_user.type == 'Admin'  %>
+      <%= f.hidden_field :type,  value: "Admin" %>
+    <% end %>
+
   </div>
 
   <div class="actions">
