--- a/app/views/devise/shared/_admin.html.erb
+++ b/app/views/devise/shared/_admin.html.erb
@@ -1,34 +1,30 @@
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark p">
+  <div class="collapse navbar-collapse col-md-8 mx-auto" id="navbarNav" >
+    <ul class="navbar-nav">
+      <li class="nav-item ">
+        <a class="nav-link active" href="/subscriptions">All Subscriptions</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/plans">Plans</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="/features">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/usages/new">Add new Usage</a>
+      </li>
+      <li class="nav-item">
+        <%= link_to  "Edit profile", edit_user_registration_path, class: 'nav-link' %>
+      </li>
 
+    </ul>
+  </div>
 
-
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <div class="collapse navbar-collapse col-md-8 mx-auto" id="navbarNav" >
-        <ul class="navbar-nav">
-          <li class="nav-item ">
-            <a class="nav-link active" href="/subscriptions">All Subscriptions</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/plans">Plans</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="/features">Features</a>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" href="/usages/new">Add new Usage</a>
-          </li>
-
-        </ul>
-      </div>
-
-      <% if user_signed_in? %>
-        <%
-=begin%>
- <a class="navbar-brand" href="#">
-          <%= image_tag current_user&.image, class: "style_image" %>
-        </a>
-<%
-=end%>
-        <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
-      <% end %>
-  </nav>
+  <% if user_signed_in? %>
+    <a class="navbar-brand" href= '/users/edit' >
+            <%= image_tag current_user.image, class: "style_image" %>
+    </a>
+    <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
+  <% end %>
+</nav>
 
