--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -3,20 +3,14 @@
     <%= render 'error', obj: @subscription.errors %>
   <% end %>
 <% end %>
-
+<h1 class="text-center p">Subscribe Here</h1>
 <div class="container", style= "width: 300px;" >
   <%= form_with(model: @subscription, local: true) do |form| %>
-    <div class= "form-group">
-      <%= form.label :billing_date %><br>
-      <%= form.text_field :billing_date %>
-    </div>
-
-    <div class= "form-group">
-      <%= form.label :plan_id, "Plan" %><br />
-      <%= select_tag :plan_id, options_for_select(@plans.collect{ |u| [u.name, u.id] }) %>
+    <div class= "form-group btn">
+      <%= select_tag :plan_id, options_for_select(@plans.collect{ |u| [u.name, u.id] }), class:'h-40' %>
     </div>
     <div >
-      <%= form.submit  "Create Subscription",  class: "btn btn-success" %>
+      <%= form.submit  "Create Subscription",  class: "btn btn-grey" %>
     </div>
   <% end %>
 </div>
