--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -7,22 +7,22 @@
     <%= form_with model: @feature do |form| %>
       <div class="form-group">
         <%= form.label :name %><br>
-        <%= form.text_field :name, required: true %>
+        <%= form.text_field :name, class: "form-control", required: true %>
       </div>
 
       <div class="form-group">
         <%= form.label :code %><br>
-        <%= form.text_field :code, required: true %>
+        <%= form.text_field :code, class: "form-control", required: true %>
       </div>
 
       <div  class="form-group">
         <%= form.label :unit_price %><br>
-        <%= form.number_field :unit_price, required: true %>
+        <%= form.number_field :unit_price, class: "form-control", required: true %>
       </div>
 
       <div  class="form-group">
         <%= form.label :max_limit %><br>
-        <%= form.number_field :max_limit, required: true %>
+        <%= form.number_field :max_limit, class: "form-control", required: true %>
       </div>
 
       <div class="action">
