--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,43 @@
 <div class="row">
-<div class = "ml-50" style="margin:auto">
-  <h2>Sign up</h2>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <div>
-      <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true %>
+  <div class = "col-sm-3" style="margin:auto; margin-top: 20px; padding: 20px; border: solid thin; border-color: LightGrey; background-color: white;">
+    <h2  class="text-center" style="font-size: 18px; line-height: 50px;">Sign up</h2>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div>
+        <%= f.text_field :name, autofocus: true, class: "form-control form-input", placeholder: 'Name'%>
+      </div>
+
+      <div class=”field”>
+        Upload Profile Picture
+        <%= f.file_field :image, class: "form-control form-input", placeholder: 'Image'%>
+      </div>
+
+      <div class="field">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-input", placeholder: 'Email' %>
+      </div>
+
+      <div class="field">
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-input", placeholder: "Password ( #{@minimum_password_length} characters minimum)" %>
+      </div>
+
+      <div class="field">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-input", placeholder: 'Password Confirnation' %>
+      </div>
+
+      <div class="field">
+        <%= f.hidden_field :type, value: "Buyer" %>
+      </div>
+
+      <div class="actions">
+        <br>
+        <%= f.submit "Sign up", class: 'btn btn-dark', style: "width: 405px;" %>
+      </div>
+    <% end %>
+
+    <div style="margin: 10px;">
+      <%= render "devise/shared/links" %>
     </div>
 
-    <div class=”field”>
-      <p> Upload Profile Picture </p>
-      <%= f.file_field :image %>
-    </div>
-
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.hidden_field :type, value: "Buyer" %>
-    </div>
-
-    <div class="actions">
-      <br>
-      <%= f.submit "Sign up", class: "btn btn-success" %>
-    </div>
-  <% end %>
-</div>
+  </div>
 </div>
