--- a/app/views/devise/shared/_buyer.html.erb
+++ b/app/views/devise/shared/_buyer.html.erb
@@ -1,24 +1,20 @@
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/subscriptions">Subscriptions </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/plans">Plans</a>
+        </li>
+      </ul>
+    </div>
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-top: -10px;">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/subscriptions">Subscriptions </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/plans">Plans</a>
-          </li>
-        </ul>
-      </div>
-
-      <% if user_signed_in? %>
-        <a class="navbar-brand" href= '/users/edit' >
-          <%= image_tag current_user.image, class: "style_image" %>
-        </a>
-        <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
-      <% end %>
-  </nav>
+    <% if user_signed_in? %>
+      <a class="navbar-brand" href= '/users/edit' >
+        <%= image_tag current_user.image, class: "style_image" %>
+      </a>
+      <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
+    <% end %>
+</nav>
 
