--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -204,3 +204,11 @@ ul, li {
   line-height: 40px;
   margin-bottom: 5px;
 }
+
+.display-box{
+  margin:auto;
+  margin-top: 20px;
+  padding: 20px;
+  border: solid thin;
+  border-color: LightGrey;
+}
