--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class = "ml-20" style="margin:auto; margin-top: 20px; padding: 20px; border: solid thin; border-color: LightGrey;">
+  <div class = "ml-20 display-box" >
     <h2>Resend confirmation instructions</h2>
 
     <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
