--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -205,10 +205,15 @@ ul, li {
   margin-bottom: 5px;
 }
 
-.display-box{
+.display-box {
   margin:auto;
   margin-top: 20px;
   padding: 20px;
   border: solid thin;
   border-color: LightGrey;
+}
+
+.login {
+  font-size: 18px;
+  line-height: 50px;
 }
