--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class = "col-sm-3" style="margin:auto; margin-top: 20px; padding: 20px; border: solid thin; border-color: LightGrey; background-color: white;">
+  <div class = "col-sm-3 display-box">
     <h2  class="text-center" style="font-size: 18px; line-height: 50px;">Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
