--- a/app/views/devise/shared/_admin.html.erb
+++ b/app/views/devise/shared/_admin.html.erb
@@ -2,7 +2,7 @@
   <div class="collapse navbar-collapse col-md-8 mx-auto" id="navbarNav" >
     <ul class="navbar-nav">
       <li class="nav-item ">
-        <a class="nav-link active" href="/subscriptions">All Subscriptions</a>
+        <a class="nav-link" href="/subscriptions">All Subscriptions</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/plans">Plans</a>
