--- a/app/views/devise/shared/_buyer.html.erb
+++ b/app/views/devise/shared/_buyer.html.erb
@@ -11,10 +11,14 @@
     </div>
 
     <% if user_signed_in? %>
-      <a class="navbar-brand" href= '/users/edit' >
-        <%= image_tag current_user.image, class: "style_image" %>
-      </a>
-      <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
+      <% if current_user.image.attached? %>
+        <a class="navbar-brand" href= '/users/edit' >
+          <%= image_tag current_user.image, class: "style_image" %>
+        </a>
+      <% else %>
+        <%= link_to "Edit Profile ", edit_user_registration_path, class: 'left-link' %>
+      <% end %>
+      <%= link_to "Logout", destroy_user_session_path, class: 'left-link', :method => :delete %>
     <% end %>
 </nav>
 
