--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -41,30 +41,28 @@
   </div>
 <% else %>
 
-<div class="plans">
- <% @plan.each do |plan| %>
-    <div class="plan-box">
-      <div class="plan-options">
-        <p class="plan-name">
-          <%= plan.name %>
-        </p>
-        <div class="plan-price">
-          <strong><%= plan.fee %>$</strong>
+  <div class="plans">
+  <% @plans.each do |plan| %>
+      <div class="plan-box">
+        <div class="plan-options">
+          <p class="plan-name">
+            <%= plan.name %>
+          </p>
+          <div class="plan-price">
+            <strong><%= plan.fee %>$</strong>
+          </div>
+          <ul class="plan-details">
+            <% plan.features.each do |feature| %>
+              <li>
+                <strong><%= feature.name %></strong>
+              </li>
+            <% end %>
+          </ul>
+          <div class="element-hidden more-options btn">
+            <%= link_to '+Subscribe', {:controller => 'subscriptions', :action => 'create', :plan_id => plan.id, :billing_date => Date.today}, method: :post %>
+          </div>
         </div>
-
-        <ul class="plan-details">
-          <% plan.features.each do |feature| %>
-            <li><strong><%= feature.name %></strong> </li>
-          <% end %>
-        </ul>
-
-
-        <div class="element-hidden more-options btn">
-          <%= link_to '+Subscribe', {:controller => 'subscriptions', :action => 'create', :plan_id => plan.id, :billing_date => Date.today}, method: :post %>
-        </div>
-
       </div>
-    </div>
-  <% end %>
-</div>
+    <% end %>
+  </div>
 <% end %>
