--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -10,7 +10,7 @@
             </tr>
           </thead>
           <tbody>
-            <% @plan.each do |plan| %>
+            <% @plans.each do |plan| %>
                 <tr id="plan_<%= plan.id %>">
                   <td>
                     <%= plan.name %>
