--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,17 +1,15 @@
 <div class="row">
-  <div class = "ml-50" style="margin:auto">
+  <div class = "col-sm-3 display-box">
 
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <h2 class='heading text-center'>Update <%= resource_name.to_s.humanize %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
       <div>
-          <%= f.label :name %><br />
-          <%= f.text_field :name, autofocus: true %>
+        <%= f.text_field :name, autofocus: true, class: "form-control form-input" %>
       </div>
       <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-input" %>
       </div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -20,27 +18,23 @@
 
       <div class=”field”>
         <p> Change Profile Picture </p>
-        <%= f.file_field :image %>
+        <%= f.file_field :image, class: "form-control form-input" %>
       </div>
 
 
       <div class="field">
         <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-        <% if @minimum_password_length %>
-          <br />
-          <em><%= @minimum_password_length %> characters minimum</em>
-        <% end %>
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-input", placeholder: "Password ( #{@minimum_password_length} characters minimum)" %>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-input" %>
       </div>
 
       <div class="field">
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-        <%= f.password_field :current_password, autocomplete: "current-password" %>
+        <%= f.label :current_password %>
+        <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control form-input" %>
       </div>
 
       <div class="field">
@@ -52,14 +46,12 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Update" %>
+        <%= f.submit "Update", class: 'btn btn-dark button', style: "width: 420px;"  %>
       </div>
     <% end %>
 
-    <h3>Cancel my account</h3>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
-
-    <%= link_to "Back", :back %>
+    <div class="text-center">
+      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger button' %>
+    </div>
   </div>
 </div>
