--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class = "col-sm-3 display-box">
-    <h2  class="text-center" style="font-size: 18px; line-height: 50px;">Sign up</h2>
+    <h2  class="text-center heading" >Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
