--- a/app/views/devise/shared/_admin.html.erb
+++ b/app/views/devise/shared/_admin.html.erb
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark p">
   <div class="collapse navbar-collapse col-md-8 mx-auto" id="navbarNav" >
     <ul class="navbar-nav">
-      <li class="nav-item ">
+      <li class="nav-item <%= active?('/subscriptions') %> ">
         <a class="nav-link" href="/subscriptions">All Subscriptions</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item <%= active?('/plans') %>">
         <a class="nav-link" href="/plans">Plans</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item  <%= active?('/features') %>">
         <a class="nav-link " href="/features">Features</a>
       </li>
     </ul>
