--- a/app/views/devise/shared/_buyer.html.erb
+++ b/app/views/devise/shared/_buyer.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item <%= active?('/subscriptions') %>" >
           <a class="nav-link" href="/subscriptions">Subscriptions </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item <%= active?('/plans') %>">
           <a class="nav-link" href="/plans">Plans</a>
         </li>
       </ul>
