--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item <%= active?('/users/sign_in') %>">
               <a class="nav-link" href="/users/sign_in">Sign In <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item <%= active?('/users/sign_up') %>">
               <a class="nav-link" href="/users/sign_up">Sign up</a>
             </li>
           </ul>
