Image level validation, Action mailer, Controller hooks, Authorization

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,7 +7,7 @@
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control form-input', placeholder: 'Email' %>
       </div>
       <div class="actions">
-        <%= f.submit "Send me reset password instructions", class: 'btn btn-info' %>
+        <%= f.submit "Send me reset password instructions", class: 'btn btn-info full-width' %>
       </div>
     <% end %>
     <div>
