--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
 
       <div class="actions">
         <br>
-        <%= f.submit "Sign up", class: 'btn btn-dark', style: "width: 405px;" %>
+        <%= f.submit "Sign up", class: 'btn btn-dark full-width' %>
       </div>
     <% end %>
 
