--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,17 @@
       <%= flash[:notice] %>
     </div>
     <% end %>
+
+    <% if alert %>
+      <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
+
     <div class='container-fluid'>
       <%= yield %>
     </div>
 
   </body>
-  <script>
-
-  </script>
 </html>
