--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -2,34 +2,34 @@
   <div class="row">
     <div class="col-md-8 mx-auto" id="abc">
       <table class="table table-dark">
-          <h2 class="text-center"><strong>Plans</strong></h2>
-          <thead>
-            <tr>
-              <th>Plan Name</th>
-              <th>Fee</th>
+        <h2 class="text-center"><strong>Plans</strong></h2>
+        <thead>
+          <tr>
+            <th>Plan Name</th>
+            <th>Fee</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @plans.each do |plan| %>
+            <tr id="plan_<%= plan.id %>">
+              <td>
+                <%= plan.name %>
+              </td>
+              <td>
+                <%= plan.fee %>
+              </td>
+              <% if user_signed_in? && current_user.type == 'Admin'  %>
+                <td>
+                  <%= link_to 'Edit', edit_plan_path(plan), class:'link' %>
+                </td>
+                <td>
+                  <%= link_to 'Delete', plan_path(plan),remote: true, method: :delete, data: { confirm: "Are you sure?" }, class:'link' %>
+                </td>
+              <% end %>
             </tr>
-          </thead>
-          <tbody>
-            <% @plans.each do |plan| %>
-                <tr id="plan_<%= plan.id %>">
-                  <td>
-                    <%= plan.name %>
-                  </td>
-                  <td>
-                    <%= plan.fee %>
-                  </td>
-                  <% if user_signed_in? && current_user.type == 'Admin'  %>
-                    <td>
-                      <%= link_to 'Edit', edit_plan_path(plan), class:'link' %>
-                    </td>
-                    <td>
-                      <%= link_to 'Delete', plan_path(plan),remote: true, method: :delete, data: { confirm: "Are you sure?" }, class:'link' %>
-                    </td>
-                  <% end %>
-                </tr>
 
-            <% end %>
-          </tbody>
+          <% end %>
+        </tbody>
       </table>
     </div>
   </div>
@@ -55,6 +55,7 @@
             <% plan.features.each do |feature| %>
               <li>
                 <strong><%= feature.name %></strong>
+                <strong style="float:right;"><%= feature.max_limit %> units</strong>
               </li>
             <% end %>
           </ul>
