--- a/app/views/transaction_mailer/new_subscription_email.html.erb
+++ b/app/views/transaction_mailer/new_subscription_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Your subscription has been created. !</p>
+    <p>Your subscription has been createddddd.!</p>
       --------------------------
   </body>
 </html>
